solve top anchor overflow problem

--- a/submarine/client/styles/main_layout.less
+++ b/submarine/client/styles/main_layout.less
@@ -4,6 +4,7 @@
 
 .top_anchor.bottom {
   bottom: 0;
+  overflow: hidden;
 }
 
 .content > .fa-cog {
